--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-10 03:28:21 -0500 
+%% Created for Evan Bollig at 2013-09-11 13:48:53 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{KeplerFactSheet,
+	Date-Added = {2013-09-11 18:47:49 +0000},
+	Date-Modified = {2013-09-11 18:48:37 +0000},
+	Howpublished = {\url{http://www.nvidia.com/content/tesla/pdf/Tesla-KSeries-Overview-LR.pdf}},
+	Month = {Oct},
+	Title = {TESLA KEPLER GPU Accelerators},
+	Year = {2012}}
 
 @article{Gibbs1976,
 	Abstract = {A new algorithm for reducing the bandwidth and profile of a sparse matrix is described. Extensive testing on finite element matrices indicates that the algorithm typically produces bandwidth and profile which are comparable to those of the commonly-used reverse Cuthill-McKee algorithm, yet requires significantly less computation time.},
