--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -14,16 +14,20 @@
 \chapter{GPU SpMV}
 \label{chap:gpu_rbffd}
 
-General Purpose GPU (GPGPU) computing is one of today's hottest trends in scientific computing. As problem sizes grow larger, it behooves us to work on parallel architectures, be it across multiple CPUs or one or more GPUs, and with over 1 TFLOP/s \cite{KeplerRef} peak throughput possible on a single GPU, a strong argument is made for the latter. 
-
-%TODO: gpus benefit from faster memory bandwidth, parallel compute units and sharing across threads.
-
-While CPU designers have 
-
+General Purpose GPU (GPGPU) computing is one of today's hottest trends in scientific computing. As problem sizes grow larger, it behooves us to work on parallel architectures, be it across multiple CPUs or one or more GPUs, and with over 1 TFLOP/s peak throughput possible in double precision on a single GPU\cite{KeplerFactSheet}, a strong argument is made for the latter. 
 
 GPUs originated as dedicated hardware for video games and computer graphics (e.g., for rasterization). Thanks to the highly profitable and always demanding game industry, the static rendering pipeline of yore, was molded into a fully programmable and dynamic execution platform with a SIMD-like programming model. 
 
-For many years leading up to 2006, researchers were able---with significant effort---to trick the GPU into solving scientific problems by encoding solutions within the graphics rendering process. The release of NVidia's CUDA architecture and software stack at the end of 2006, made those tricks obsolete as developers could suddenly target the GPU with the same ease of writing a C-program. GPUs were finally accessible for use by the general public, not limited to game designers and. 
+For many years leading up to 2006, researchers were able---with significant effort---to trick the GPU into solving scientific problems by encoding solutions within the graphics rendering process. The release of NVidia's CUDA architecture and software stack at the end of 2006, deprecated those tricks as developers could suddenly target the GPU with the ease of writing a general C-program. The CUDA hardware and software allowed for non-graphics applications to offload computation. GPUs were finally accessible for use by the general public, not limited to game designers and. 
+
+Today, CPUs are designed for scalar arithmetic and logic. GPUs emphasize vector operations with SIMD-like architecture. 
+Due to limitations on how CPUs 
+
+CPU growth is limited by power and size. In response, CPU designers for years have been scaling the number of cores on a die rather than the frequency. 
+
+
+To meet the demand for computer graphics GPUs are designed with emphasis on fast memory bandwidth, thousands of simple compute cores and features like 2-D and 3-D texture caching. 
+
 
 
 %TODO: GPU hardware
