Added figure demonstrating the sparse storage representations

--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -128,7 +128,17 @@ Many GPU applications claim a 50x or higher speedup. This will never be the case
 \subsection{Naive Kernels}
 \subsection{SpMV Formats/Kernels}
 
+
 CSR Bytes:Flop ratio: \url{http://arxiv.org/pdf/1101.0091v1.pdf}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.9\textwidth]{gpu_content/omnigraffle/SparseStorage.pdf}
+\caption{Sparse format example demonstrating a sparse matrix and corresponding storage data structures. }
+\label{fig:sparse_format}
+\end{figure}
+
+%TODO: list example loops for sparse kernels
 
 \section{Performance Comparison}
 \subsection{Performance of Cosine CL vs VCL}
