--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -263,6 +263,7 @@ Figure~\ref{fig:cosine_10revs} shows the cosine bell transported ten full revolu
 
 
 \hl{Complete:}
+%TODO: where did I get 17.28 minutes? 1036.8 / 60 = 17.28
 17.28 minutes was a conservative step that allowed the problem to scale up to $N=27556$ nodes. Compare this to the conservative 30 minute time-step taken for $N=4096$ nodes in \cite{FlyerWright07}, which was already half necessary for DG and 8x less than necessary for both Spherical Harmonics and Double Fourier methods.\authnote{It would be good to quantify the appropriate $dt$ that would compare RBF-FD to their $N=4096$ case with global RBFs.} 
 
 
