--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -133,7 +133,6 @@ The layout of this document is as follows. This chapter continues with a survey 
 
 \section{On Parallel/Distributed RBF-FD} 
 
-\authnote{REVISE RELATED: }
 %\authnote{Related work for start of Parallel/GPU chapter}
 Parallel implementations of RBF methods rely on domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
 
@@ -158,25 +157,7 @@ results from scaling tests were provided.
 
 Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available at this time. 
 
-Perhaps the most competitive parallel implementation of RBFs is the PetRBF \cite{Yokota2010} branch of PETSc \cite{PETSc}. The authors of PetRBF (also developers for PETSc) have implemented a highly scalable, efficient RBF interpolation method based on compact RBFs (i.e., they operate on sparse matrices). The authors demonstrate efficient weak scaling of PetRBF across 1024 processes on a Blue Gene/L, and strong scaling up to 128 processes on the same hardware. Additionally, strong scaling was tested on a Cray XT4. On the Blue Gene/L, PetRBF is demonstrated to achieve an impressive 74\% parallel weak scaling efficiency on 1024 processes (operating on over 50 million points), and 84\% strong scaling efficiency for 128 processes. For the Cray XT4, strong scaling tops out at 36\% for 128 processes, a respectable number---and similar to observed results for our own code on 128 processes.  
-
-
-Parallelization of RBF-FD is achieved at two levels. First, the
-physical domain of the problem is partitioned
-into overlapping subdomains, each handled by a different MPI process. All CPUs
-operate independently to compute/load RBF-FD stencil weights, run diagnostic
-tests and perform other initialization tasks. A CPU computes only weights
-corresponding to stencils centered in the interior of its partition. After
-initialization, CPUs continue concurrently to solve the PDE. Communication
-barriers ensure that the CPUs execute in lockstep to maintain consistent
-solution values in regions where partitions overlap.  The second level of
-parallelization offloads time-stepping of the PDE to the GPU.  Evaluation of
-the right hand side of Equation~(\ref{eq:evaluation_with_hyperviscosity}) is
-data-parallel: the solution derivative at each stencil center is evaluated
-independently of the other stencils. This maps well to the GPU, offering decent
-speedup even in unoptimized kernels. Although the stencil weight calculation is
-also data-parallel, we assume that in this context that the weights are
-precomputed and loaded once from disk during the initialization phase. 
+Perhaps the most competitive parallel implementation of RBFs is the PetRBF branch of PETSc \cite{Yokota2010}. The authors of PetRBF have implemented a highly scalable, efficient RBF interpolation method based on compact RBFs (i.e., they operate on sparse matrices). The authors demonstrate efficient weak scaling of PetRBF across 1024 processes on a Blue Gene/L, and strong scaling up to 128 processes on the same hardware. On the Blue Gene/L, PetRBF is demonstrated to achieve an impressive 74\% parallel weak scaling efficiency on 1024 processes (operating on over 50 million points), and 84\% strong scaling efficiency for 128 processes. Strong scaling was also tested on a Cray XT4, where strong scaling tops out at 36\% for 128 processes, a respectable number---and similar to observed results for our own code on \authnote{review: } 128 processes.  
 
 
 %Within the scope of this paper we detail our method for spanning RBF-FD across multiple CPU/GPU processors and emphasize numerical validation of the implementation rather than optimization strategies. We will consider optimization in future work. The calculations are performed on Keeneland, a high performance computing installation supported by the National Science Foundation and located at Oak Ridge National Lab. Keeneland currently has 240 CPUs accompanied by 360 NVidia Fermi class GPUs with at least double that number expected by the end of 2012 \cite{Vetter2011}.
