Fixed links to algorithms

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -12,7 +12,8 @@
 \usepackage{bibentry}
 \nobibliography*
 \usepackage[sort]{natbib}
-
+  
+\usepackage{float}
 \usepackage[
     hyperindex=true,		% Make numbers of index links as well
    	backref=page, 		% Provide page listing where refs occur in the bibliography
