--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -134,7 +134,7 @@ CSR Bytes:Flop ratio: \url{http://arxiv.org/pdf/1101.0091v1.pdf}
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{gpu_content/omnigraffle/SparseStorage.pdf}
-\caption{Sparse format example demonstrating a sparse matrix and corresponding storage data structures. }
+\caption{Sparse format example demonstrating a sparse matrix and corresponding storage data structures. ELL format assumes two non-zeros per row. }
 \label{fig:sparse_format}
 \end{figure}
 
