--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -132,6 +132,14 @@ Many GPU applications claim a 50x or higher speedup. This will never be the case
 \section{Targeting the GPU}
 
 \subsection{OpenCL}
+In our initial implementation, published in \cite{BolligFlyerErlebacher2012}, all bets were hedged in favor of OpenCL as the future of GPU computing. Custom kernels were developed to apply RBF-FD weights in the equivalent of a CSR SpMV. Since then the custom kernels have been dropped in favor of a library called ViennaCL. 
+
+%TODO: tell the story of ViennaCL. 
+%TODO: what motivated the switch
+The library includes a variety of sparse matrix formats, solvers, preconditioners, etc. Dense and sparse containers simplify targeting the GPU. 
+
+At the onset of work with ViennaCL two things were apparent: 1) the library was incredibly powerful but limited to square matrices; and 2) the library had no support for distributed computing. Our implementation of RBF-FD (\cite{BolligRBFFDGPU}) required rectangular matrices resulting from domain decomposition. The enhancements to the API have since been added to the main branch of ViennaCL. 
+
 \subsection{Naive Kernels}
 \subsection{SpMV Formats/Kernels}
 
@@ -169,15 +177,9 @@ consider the various sparse formats provided by CUSP and ViennaCL.
 %TODO later: \item All stencils with non-uniform size
 %TODO: What is the optimal choice of sparse container? How do the sparse containers compare in performance to each other, and to our custom kernels? What can we conclude? 
 
-Compare formats: 
-\begin{itemize}
-\item ELL
-\item COO
-\item CSR
-\item Other formats such as HYB, JAD, DIA are considered on the GPU
-\end{itemize}
 
-How is communication overlap handled with each format? 
+Other formats exist such as the Hybrid ELL plus CSR (HYB) format \cite{Bell2009}, Diagonal (DIAG) and Jagged Diagonal (JAD) variants, and a number of variants on the ELL format that operate in blocks (BELL), slices (SELL), or both (SBELL) \cite{SuKeutzer2012}. The HYB format stores the bulk of a matrix in an ELL container and the excess non-zeros per row in a CSR format. HYB benefits from reduced storage and memory loads in the ELL, and maintains the generality of a CSR matrix. 
+
 
 
 Conclude: sparse containers allow increased efficiency compared to our custom kernels. The custom kernels compete with CSR and COO. 
@@ -197,7 +199,7 @@ To further optimize RBF-FD on the GPU, we formulate the problem in terms of a Sp
 
 
 
-We compare the performance of our custom kernel to ViennaCL kernels (ELL, CSR, COO, HYB, DIAG), UBlas (COO, CSR) and Eigen (COO, CSR, ELL)
+We compare the performance of our custom kernel to ViennaCL kernels (ELL, CSR, COO), UBlas (CSR) 
 
 
 ViennaCL allows control of the number of work-items for each kernel. 
