--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-11 13:48:53 -0500 
+%% Created for Evan Bollig at 2013-09-13 10:15:54 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{SuKeutzer2012,
+	Added-At = {2012-06-26T00:00:00.000+0200},
+	Author = {Su, Bor-Yiing and Keutzer, Kurt},
+	Biburl = {http://www.bibsonomy.org/bibtex/27432f7a33c1ab89cb71b38b9f2977e38/dblp},
+	Booktitle = {ICS},
+	Crossref = {conf/ics/2012},
+	Date-Added = {2013-09-13 15:15:37 +0000},
+	Date-Modified = {2013-09-13 15:15:54 +0000},
+	Editor = {Banerjee, Utpal and Gallivan, Kyle A. and Bilardi, Gianfranco and Katevenis, Manolis},
+	Ee = {http://doi.acm.org/10.1145/2304576.2304624},
+	Interhash = {a6dc1f9283918f0a233948850030c3a6},
+	Intrahash = {7432f7a33c1ab89cb71b38b9f2977e38},
+	Isbn = {978-1-4503-1316-2},
+	Keywords = {dblp},
+	Pages = {353-364},
+	Publisher = {ACM},
+	Timestamp = {2012-06-26T00:00:00.000+0200},
+	Title = {clSpMV: A Cross-Platform OpenCL SpMV Framework on GPUs.},
+	Url = {http://dblp.uni-trier.de/db/conf/ics/ics2012.html#SuK12},
+	Year = 2012,
+	Bdsk-Url-1 = {http://dblp.uni-trier.de/db/conf/ics/ics2012.html#SuK12}}
 
 @misc{KeplerFactSheet,
 	Date-Added = {2013-09-11 18:47:49 +0000},
